<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:contentDescription="Foto Profil"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pp" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#959595"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvNim"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="10118901"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#CDCBCB"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama" />

    <ScrollView
        android:layout_width="398dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.578">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_kelas"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvKelas"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_jk"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvJK"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_ttl"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvTTL"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_addrs"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvAddrs"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_blood"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvGolDar"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_food"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvFood"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_drink"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvDrink"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_hobi"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvHobi"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_lagu"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvSong"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_film"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvFilm"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_job"
                        android:textColor="#686868"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvJob"
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>